--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="Invitación">
   <meta property="og:description" content="¡Vamos a celebrar!">
-  <meta property="og:image" itemprop="image" content="https://invitacion-bluey.netlify.app/files/miniatura.png">
+  <meta property="og:image" itemprop="image" content="https://invitacion-Lee.netlify.app/files/miniatura.png">
 
   <title>Invitación</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -129,7 +129,7 @@
 
   <div id="button-container">
     
-     <a id="boton-asistencia" href="https://api.whatsapp.com/send?phone=+526141426036&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3" class="button">
+     <a id="boton-asistencia" href="https://api.whatsapp.com/send?phone=+19567311957&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3" class="button">
       <i class="fab fa-whatsapp"></i> <b>CONFIRMAR ASISTENCIA<b>
     </a>
 
